# auditkit

./: .env.example  .gitattributes  .gitignore  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.lock.txt
.github/workflows/: sanity.yml
.streamlit/: config.toml
app/: streamlit_app.py
data/eval/: questions.jsonl
data/raw/: README.md
docs/: ARCHITECTURE.md  DESIGN_DECISIONS.md  FAILURE_MODES.md  OPERATING_NOTES.md  RUNTIME_SETUP.md  VALIDATION.md  operator_input_template.md
examples/: README.md  adversarial_sample.md  audit_pack_sample.json  audit_pack_sample.md  evaluation_sample.md
scripts/: doctor.py  validate_examples.py
src/auditkit/: ask.py  audit_pack.py  build_index.py  chunking.py  eval.py  faiss_store.py  generate_pack.py  lmstudio_client.py  pdf_ingest.py  rag.py  redteam.py  search_index.py  settings.py
tests/: test_answer_guards.py  test_audit_pack_sample.py  test_public_surface.py
